--- a/styles.css
+++ b/styles.css
@@ -14,80 +14,103 @@
 }
 
 body {
-  font-family: "Barlow Semi Condensed", sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  color: var(--dark-blue);
-  background: var(--Cream);
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-
-h1 {
-  font-family: var(--second-font-family);
-  font-size: 2.5rem;
-  font-weight: 900;
-  color: var(--dark-blue);
-  margin-bottom: 0.5rem;
-}
-
-img {
-  width: 300px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-.top-content {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  margin-bottom: 2rem;
-}
-
-.right-content {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  background-color: var(--Cream);
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  width: 300px;
-  height: 450px;
-  background-color: var(--White);
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  float: right;
+  justify-content: center;
+  height: 100vh;
+}
+.desktop-image {
+  width: 100%;
+  height: 100%;
+
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  display: block;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+
+.left-side {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.right-side {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .container {
-  box-sizing: border-box;
+  background-color: var(--White);
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 600px;
+  justify-items: center;
 }
 
 .light-txt {
-  font-family: var(--main-font-family);
-  font-size: 0.5 rem;
   color: var(--grayish-blue);
-  margin-bottom: 0.5rem;
-  opacity: 0.5;
+  line-height: 4px;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  font-family: var(--main-font-family);
 }
 
+.product-title {
+  color: var(--dark-blue);
+  font-family: var(--second-font-family);
+  font-weight: 700;
+}
+
+.content {
+  padding: 2rem;
+  text-align: left;
+  color: var(--grayish-blue);
+}
 .price {
   color: var(--dark-cyan);
+  font-family: var(--second-font-family);
+  font-weight: 700;
   font-size: 2rem;
-  display: flex;
-  align-items: center;
+  margin-top: -20px;
 }
 
-.btn-addtocart {
-  border-radius: 10px;
+.btn {
   background-color: var(--dark-cyan);
   color: var(--White);
-  font-size: 1rem;
-  font-weight: 700;
-  padding: 0.5rem 1rem;
   border: none;
+  border-radius: 10px;
+  padding: 1rem 2rem;
+  font-family: var(--main-font-family);
+  font-weight: 700;
+  font-size: 1rem;
   cursor: pointer;
-  margin-top: 1rem;
+  transition: all 0.3s ease-in-out;
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
+
+/* Images */
+.mobile-image {
+  display: none;
+}
+
+@media screen and (max-width: 992px) {
+  .mobile-image {
+    display: inline-block;
+  }
+  .desktop-image {
+    display: none;
+  }
 }
