--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,20 @@ body {
   overflow: hidden;
 }
 
+p,
+h1 {
+  overflow-wrap: break-word;
+}
+
+.flex-grp {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
 .desktop-image {
   width: 100%;
   height: 100%;
@@ -67,7 +81,8 @@ body {
   letter-spacing: 4px;
   text-transform: uppercase;
   font-family: var(--main-font-family);
-  padding-left: -10px;
+  margin-top: 20px;
+  float: left;
 }
 
 .product-title {
@@ -76,6 +91,8 @@ body {
   font-weight: 700;
   padding: auto;
   line-height: 1.1;
+  float: left;
+  margin-top: 20px;
 }
 
 .content {
@@ -96,12 +113,19 @@ body {
   margin-top: -20px;
 }
 
+.og-price {
+  color: var(--grayish-blue);
+  font-family: var(--main-font-family);
+  font-size: 1rem;
+  margin-top: -20px;
+}
+
 .btn {
   background-color: var(--dark-cyan);
   color: var(--White);
   border: none;
   border-radius: 10px;
-  padding: 1rem 2rem;
+  padding: 1rem 4rem;
   font-family: var(--main-font-family);
   font-weight: 700;
   font-size: 1rem;
