--- a/styles.css
+++ b/styles.css
@@ -41,14 +41,6 @@ h1 {
   margin-bottom: 10px;
 }
 
-.desktop-image {
-  width: 100%;
-  height: 100%;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  border-radius: 0.5rem 0 0 0.5rem;
-}
-
 .left-side {
   display: flex;
   flex-direction: column;
@@ -82,7 +74,9 @@ h1 {
   text-transform: uppercase;
   font-family: var(--main-font-family);
   margin-top: 20px;
-  float: left;
+  margin-right: auto;
+  padding: 0 0 0 20px;
+  opacity: 0.8;
 }
 
 .product-title {
@@ -140,16 +134,17 @@ h1 {
   display: none;
 }
 
-@media screen and (max-width: 992px) {
-  .mobile-image {
-    display: inline-block;
-  }
-  .desktop-image {
-    display: none;
-  }
+.desktop-image {
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-radius: 0.5rem 0 0 0.5rem;
 }
 
-@media screen and (max-width: 768px) {
+/* Desktops */
+
+@media (max-width: 1280px) {
   .container {
     grid-template-columns: 1fr;
     display: flex;
@@ -166,12 +161,65 @@ h1 {
     margin-top: 1rem;
     margin-bottom: auto;
   }
-  .content {
-    padding: 1rem;
-  }
   .mobile-image {
     width: 100%;
     height: 100%;
     border-radius: 0.5rem 0.5rem 0 0;
+  }
+}
+
+/* Tablets */
+@media (min-width: 768px) and (max-width: 1279px) {
+  .mobile-image {
+    display: inline-block;
+  }
+  .desktop-image {
+    display: none;
+  }
+  .product-title {
+    font-size: 2rem;
+  }
+  .btn {
+    padding: 1rem 2rem;
+  }
+  .container {
+    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .right-side {
+    order: 2;
+  }
+  .left-side {
+    order: 1;
+  }
+}
+
+/* Mobile Devices */
+@media (max-width: 767px) {
+  .mobile-image {
+    display: inline-block;
+  }
+  .desktop-image {
+    display: none;
+  }
+  .product-title {
+    font-size: 2rem;
+  }
+  .btn {
+    padding: 1rem 2rem;
+  }
+  .container {
+    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .right-side {
+    order: 2;
+  }
+  .left-side {
+    order: 1;
   }
 }
